Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-93068

Memory leak QTextDocument::setHtml

    XMLWordPrintable

Details

    • 11a40defff51dae2476e0da9f2b995a3a0f3bda8 (qt/qtbase/dev) 562187fc5580269897e8eece8eda396279e412eb (qt/qtbase/6.1) a15c16f5c806c9a564b0af660ccb010940091d4b (qt/tqtc-qtbase/5.15)

    Description

      1. Build Qt configured with -sanitize address.
      2. Use that to build the attached project.
      3. Run the resulting program passing in the attached input file:
        ./report input.html
        

        Memory leaks will be reported on the command line, see attached output.

      Google's oss-fuzz found this as issue 31116. They will publish the details on May 19th, the latest.

      Attachments

        1. input.html
          0.0 kB
          Robert Löhning
        2. main.cpp
          0.2 kB
          Robert Löhning
        3. report.pro
          0.1 kB
          Robert Löhning
        4. output.txt
          6 kB
          Robert Löhning
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            esabraha Eskil Abrahamsen Blomfeldt
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes