Fix memory leak when using small caps font

The small caps version of a font is kept as a QFontPrivate*
which is manually reference counted, but we neglected to
actually delete it when the reference count went to 0.

[ChangeLog][Fonts] Fixed a memory leak when initializing
a small caps font.

Fixes: QTBUG-93068
Change-Id: Icc7fb7a59bf523da84d2e6fa026940a7d1230525
Reviewed-by: Konstantin Ritt <ritt.ks@gmail.com>
Reviewed-by: Robert Löhning <robert.loehning@qt.io>
(cherry picked from commit 11a40defff51dae2476e0da9f2b995a3a0f3bda8)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>